test and enhance the code (and the logic) for cart service